# magique

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  TODO  TODO.md
examples/asteroids/: CMakeLists.txt
examples/asteroids/src/: Asteroids.cpp  Asteroids.h  main.cpp
examples/demos/assetloading/: CMakeLists.txt
examples/demos/localization/: CMakeLists.txt
examples/games/asteroids/: CMakeLists.txt  README.md
examples/games/defuser/: CMakeLists.txt  README.md
examples/games/snake/: CMakeLists.txt  README.md
examples/games/wizardquest/: CMakeLists.txt  README.md
examples/headers/: AssetPacking.h  CMakeLists.txt  CameraShake.h  Collision.h  Command.h  CommandExample.h  Console.h  GameEvents.h  GlobalNetworking.h  GlobalNetworkingExample.h  Lighting.h  LightingExample.h  LocalMultiplayer.h  LocalNetworking.h  LocalNetworkingExample.h  MultiplayerExample.h  MultipleWindows.h  PathFinding.h  PathFindingExample.h  SteamExample.h  SteamMultiplayer.h  TextFormat.h  UIExample.h  UserInterface.h  WindowExample.h  WindowManager.h  main.cpp
examples/wizardquest/: CMakeLists.txt  README.md
examples/wizardquest/src/: Components.h  Scripts.h  WizardQuest.cpp  WizardQuest.h  main.cpp
src/: CMakeLists.txt  link.cpp  main.cpp
src/application/: MainWindow.cpp  MainWindow.h
src/assets/: Asset.cpp  AssetContainer.cpp  AssetImport.cpp  AssetLoader.cpp  AssetManager.cpp  AssetPacker.cpp  AssetPacker.h  CMakeLists.txt  CSVImport.cpp  FileImports.cpp  HandleRegistry.cpp  JSON.cpp  LICENSE  LoadWrappers.h  Playlist.cpp  TextLines.cpp  TileMap.cpp  TileSet.cpp  TileSheet.cpp  fwd.h
src/assets/headers/: AssetUtil.h  LoadWrappers.h
src/core/: Allocator.cpp  Allocator.h  Animation.cpp  Animations.cpp  Audio.cpp  CMakeLists.txt  Camera.cpp  Collision.cpp  CollisionDetection.cpp  Config.h  Core.cpp  Core.h  CoreConfig.h  CoreData.h  Debug.cpp  Draw.cpp  Engine.cpp  EngineUtil.cpp  Game.cpp  GameConfig.cpp  GameLoader.cpp  InternalTypes.cpp  InternalTypes.h  Lighting.cpp  Particles.cpp  Sound.cpp  StaticCollision.cpp  Types.cpp  c2.cpp
src/core/datastructures/: Diff.h  HashGrid.h  MultiResolutionGrid.h  Quadtree.h  SmallVector.h
src/core/globals/: AssetManager.h  AudioPlayer.h  Configuration.h  DrawTickData.h  EntityTypeMap.h  HandleRegistry.h  JobScheduler.h  LogicTickData.h  PerfData.h  Scheduler.h  Shaders.h  SoundData.h  TextureAtlas.h
src/core/headers/: GameUtil.h  MainThread.h  MainThreadUtil.h  RenderUtil.h  Renderer.h  UpdateUtil.h  Updater.h
src/ecs/: CMakeLists.txt  Components.cpp  ECS.cpp  GameSystem.cpp  Registry.cpp  ScriptEngine.cpp  ScriptEngine.h  Scripting.cpp
src/ecs/systems/: CollisionSystem.h  InputSystem.h  LightingSystem.h  LogicSystem.h
src/game/: CMakeLists.txt  Game.cpp  Renderer.cpp  Renderer.h  Updater.cpp  Updater.h
src/game/common/: RenderUtil.h
src/gamedev/: AIAgent.cpp  Achievements.cpp  ActionInput.cpp  BaseShaders.cpp  Behavior.cpp  CMakeLists.txt  CommandLine.cpp  Console.cpp  GameEvents.cpp  InputAction.cpp  Localization.cpp  PathFinding.cpp  Pathfinding.cpp  Procedural.cpp  Quests.cpp  ShareCode.cpp  Strings.cpp  TextDrawer.cpp  ThreatComponent.cpp  Tweens.cpp  UsefulStuff.cpp  VirtualClock.cpp
src/graphics/: OpenGLUtil.h  Shaders.h
src/internal/: CMakeLists.txt  InternalTypes.cpp  Macros.cpp  OSUtil.cpp  Shared.h  ankerl.unordered_dense.cpp
src/internal/datastructures/: AABBTree.h  HashTypes.h  Matrix.h  MultiResolutionGrid.h  PathFindingStructs.h  StringHashMap.h  VectorType.h  fast_vector.h
src/internal/globals/: AssetManager.h  AudioPlayer.h  CommandLineData.h  Configuration.h  ConsoleData.h  DrawTickData.h  DynamicCollisionData.h  ECSData.h  EngineConfig.h  EngineData.h  EntityTypeMap.h  HandleData.h  HandleRegistry.h  JobData.h  JobScheduler.h  Loaders.h  LoadingData.h  LocalMultiplayerData.h  LoggingData.h  LogicThread.h  LogicTickData.h  MultiplayerData.h  NetworkingData.h  ParticleData.h  PathFindingData.h  PerfData.h  PerformanceData.h  ScriptData.h  ScriptEngine.h  ShaderData.h  ShaderEngine.h  StaticCollisionData.h  SteamData.h  TextureAtlas.h  TweenData.h  UIData.h
src/internal/headers/: CascadiaCode.h  CollisionDetection.h  CollisionPrimitives.h  IncludeWindows.h  MathPrimitives.h  OSUtil.h  STLUtil.h  Security.h  Shaders.h  XMLUtil.h
src/internal/misc/: CascadiaCode.h  Probably8Denser.h  Shaders.h
src/internal/systems/: CollisionSystem.h  DynamicCollisionSystem.h  InputSystem.h  (+3 more)
src/loading/: CMakeLists.txt  GameLoader.cpp  TaskExecutor.cpp  TaskExecutor.h
src/lua/: CMakeLists.txt
src/multiplayer/: CMakeLists.txt  Lobby.cpp  LocalMultiplayer.cpp  LocalSocket.cpp  LocalSockets.cpp  Multiplayer.cpp  Networking.cpp
src/perf/: Perf.h  Profile.h
src/persistance/: CMakeLists.txt  DataTable.cpp  GameConfig.cpp  GameSave.cpp
src/persistence/: CMakeLists.txt  GameConfig.cpp  GameLoader.cpp  GameSave.cpp  GameSaveData.cpp  GameSaver.cpp  TaskInterface.cpp
src/scripting/: CMakeLists.txt  LuaIntegration.h
src/steam/: CMakeLists.txt  GlobalSocket.cpp  GlobalSockets.cpp  Lobbies.cpp  Matchmaking.cpp  Steam.cpp  SteamMultiplayer.cpp
src/ui/: Button.cpp  CMakeLists.txt  Checkbox.cpp  CoreUI.h  Dropdown.cpp  Layout.cpp  ListChooser.cpp  ListMenu.cpp  LoadingScreen.cpp  Menu.cpp  Popup.cpp  Scene.cpp  SceneManager.cpp  ScrollPane.cpp  Slider.cpp  TabSwitcher.cpp  Text.cpp  TextField.cpp  TextFormat.cpp  UI.cpp  UIContainer.cpp  UIObject.cpp  UIRoot.cpp  UIScene.cpp  Window.cpp  WindowManager.cpp
src/util/: CMakeLists.txt  Compression.cpp  CrashLog.h  Jobs.cpp  Logging.cpp  Math.cpp  OSUtil.h  RayUtils.cpp  STL.cpp  Strings.cpp
test/: CMakeLists.txt  MageQuest.cpp  MageQuest.h  main.cpp
tests/: CMakeLists.txt  CollisionBenchmark.h  CollisionTest.h  HashGridTest.h  LocalMultiplayerTest.h  main.cpp  testAssetloading.cpp  testAssetpacking.cpp  testCSVReader.cpp  testConsole.cpp  testDataTable.cpp  testTextFormat.cpp  test_assetloading.cpp  test_assetpacking.cpp  test_textformat.cpp
tests/res/: csv.csv  csv2.csv  csv3.csv
(+726 files in other folders)
